AM_CXXFLAGS = $(CXX_RDYNAMIC)

pkglib_LTLIBRARIES =	libemacs.la

libemacs_la_SOURCES =						\
		DefCommand.cc		DefCommand.hh		\
		emacs.cc		emacs.hh		\
		FnCommand.cc		FnCommand.hh		\
		FnTagCommand.cc		FnTagCommand.hh		\
		FollowCommand.cc	FollowCommand.hh	\
		GetVarCommand.cc	GetVarCommand.hh	\
		Listener.cc		Listener.hh		\
		LockWrapper.cc		LockWrapper.hh		\
		network.cc		network.hh		\
		NetworkCommand.hh				\
		NetworkConnection.cc	NetworkConnection.hh	\
		SicCommand.cc		SicCommand.hh		\
		SiCommand.cc		SiCommand.hh		\
		SystemFnCommand.cc	SystemFnCommand.hh	\
		SystemVariableCommand.cc SystemVariableCommand.hh \
		TcpListener.cc		TcpListener.hh		\
		TraceData.cc		TraceData.hh		\
		UnixSocketListener.cc	UnixSocketListener.hh	\
		util.cc			util.hh			\
		VariablesCommand.cc	VariablesCommand.hh	\
		VersionCommand.cc	VersionCommand.hh
